# SEICO

./: .gitignore  CMakeLists.txt  README.md
include/: Log.h  Logging.h  SEICO.ui  mainwindow.h  message.h  messagedatamodel.h  messagemodelitem.h  messages.h  trace.h  traceitem.h
src/: Log.cpp  Logging.cpp  main.cpp  mainwindow.cpp  messagedatamodel.cpp  messagemodelitem.cpp  trace.cpp  traceitem.cpp
